--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <section id="Apropos" class="Apropos">
     <div class="section-Apropos">
-      <img src="/images/Profil.jpeg" alt="">
+      <img src="images/Profil.jpeg" alt="">
 
       <div class="information">
 
@@ -109,7 +109,7 @@
     <div class="grilleProjet">
 
       <div class="carte-projet">
-        <img src="/images/090355.png" alt="">
+        <img src="images/090355.png" alt="">
         <h3>Developement web</h3>
         <p>Création de site internet et de solution web simple et dynamique.</p>
         <div class="bouton">
@@ -120,7 +120,7 @@
       </div>
 
       <div class="carte-projet">
-        <img src="/images/085545.png" alt="">
+        <img src="images/085545.png" alt="">
         <h3>Gestion de serveur</h3>
         <p>Administration, maintenance recherche de solution d'hebergement pour des serveurs de jeu en multijoueur.</p>
         <div class="bouton">
@@ -131,7 +131,7 @@
       </div>
 
       <div class="carte-projet">
-        <img src="/images/090222.png" alt="">
+        <img src="images/090222.png" alt="">
         <h3>Création et integration de script.</h3>
         <p>Création de scripts permettant d'automatiser certaines actions et d'ameliorer l'experience utilisateur dans divers jeux mobiles et integration avec exploite.</p>
         <div class="bouton">
