--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <a href="#Projet">Projet</a>
       </li>
 
+      <li>
+        <a href="#Languages">Languages</a>
+      </li>
+
     </ul>
 
     <i class="fa-solid fa-bars" id="menu_icon"></i>
@@ -46,11 +50,11 @@
           <h3>Bonjour, je suis</h3>
           <h1>Eric Denis</h1>
           <span>Developpeur web </span>
-          <p>Jeune étudiant passionné par le développement web et la gestion d'entreprise, désireux d'apprendre, je suis disponible pour toute collaboration ou proposition de stage.</p>
+          <p>Jeune étudiant passionné par le développement web et la gestion d'entreprise, désireux d'apprendre.</p>
         </div>
 
         <div class="bouton">
-          <div class="btn"><a href="/CV.pdf" download="CV.pdf">télécharger CV</a></div>
+          <div class="btn"><a href="CV.pdf" download="CV.pdf">télécharger CV</a></div>
           <div class="btn" id="contact_button">Contact</div>
         </div>
 
@@ -67,6 +71,8 @@
     <h2 class="titre">Experience</h2>
 
     <div class="experience-info">
+
+      <img src="images/picture.jpg" alt="">
 
       <div class="grid">
         <div class="grid-card">
@@ -98,7 +104,6 @@
         </div>
       </div>
 
-      <img src="images/picture.jpg" alt="">
     </div>
   </section>
 
@@ -111,7 +116,7 @@
       <div class="carte-projet">
         <img src="images/090355.png" alt="">
         <h3>Developement web</h3>
-        <p>Création de site internet et de solution web simple et dynamique.</p>
+        <p>Developement de site internet et de solution web simple et dynamique.</p>
         <div class="bouton">
           <a href="indisponible.html" class="btn">Voir Démo</a>
           <a href="https://github.com/denisngeu" class="btn" target="_blank">Accès Github</a>
@@ -121,7 +126,7 @@
 
       <div class="carte-projet">
         <img src="images/085545.png" alt="">
-        <h3>Gestion de serveur</h3>
+        <h3>Gestion de serveurs</h3>
         <p>Administration, maintenance recherche de solution d'hebergement pour des serveurs de jeu en multijoueur.</p>
         <div class="bouton">
           <a href="indisponible.html" class="btn">Voir Démo</a>
@@ -147,6 +152,38 @@
 
   </section>
 
+  <section id="Languages" class="Languages">
+    <h2 class="titre">Langages de Programmation</h2>
+
+    <div class="logos">
+        <div class="logo-item">
+            <i class="fa-brands fa-html5"></i>
+            <span>HTML</span>
+        </div>
+
+        <div class="logo-item">
+            <i class="fa-brands fa-css3-alt"></i>
+            <span>CSS</span>
+        </div>
+
+        <div class="logo-item">
+            <i class="fa-brands fa-js"></i>
+            <span>JavaScript</span>
+        </div>
+
+        <div class="logo-item">
+            <i class="fa-brands fa-python"></i>
+            <span>Python</span>
+        </div>
+
+        <div class="logo-item">
+            <i class="fa-solid fa-file-code"></i>
+            <span>LuaScript</span>
+        </div>
+        
+    </div>
+</section>
+
   <footer>
     <ul>
       <li>
@@ -161,6 +198,9 @@
         <a href="#Projet">Projet</a>
       </li>
 
+      <li>
+        <a href="#Languages">Languages</a>
+      </li>
 
     </ul>
 
