--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>eric-denis</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
@@ -118,8 +118,8 @@
         <h3>Developement web</h3>
         <p>Developement de site internet et de solution web simple et dynamique.</p>
         <div class="bouton">
-          <a href="indisponible.html" class="btn">Voir Démo</a>
-          <a href="https://github.com/denisngeu" class="btn" target="_blank">Accès Github</a>
+          <a href="https://denisngeu.github.io/streamanim/" class="btn">Voir Démo</a>
+          <a href="https://github.com/denisngeu/streamanim" class="btn" target="_blank">Accès Github</a>
         </div>
 
       </div>
@@ -129,8 +129,8 @@
         <h3>Gestion de serveurs</h3>
         <p>Administration, maintenance recherche de solution d'hebergement pour des serveurs de jeu en multijoueur.</p>
         <div class="bouton">
-          <a href="indisponible.html" class="btn">Voir Démo</a>
-          <a href="https://github.com/denisngeu" class="btn" target="_blank">Accès Github</a>
+          <a href="https://www.youtube.com/" class="btn">Voir Démo</a>
+          <a href="https://github.com/denisngeu/Serveurs" class="btn" target="_blank">Accès Github</a>
         </div>
 
       </div>
@@ -140,8 +140,8 @@
         <h3>Création et integration de script.</h3>
         <p>Création de scripts permettant d'automatiser certaines actions et d'ameliorer l'experience utilisateur dans divers jeux mobiles et integration avec exploite.</p>
         <div class="bouton">
-          <a href="indisponible.html" class="btn">Voir Démo</a>
-          <a href="https://github.com/denisngeu" class="btn" target="_blank">Accès Github</a>
+          <a href="https://www.youtube.com/" class="btn">Voir Démo</a>
+          <a href="https://github.com/denisngeu/script" class="btn" target="_blank">Accès Github</a>
         </div>
 
       </div>
